--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
-.racer_table td {
-  background-color: white;
-  height: 20px;
-  width: 20px;
+td {
+  width: 50px;
+  height: 50px;
+  background-color: purple;
 }
 
-.racer_table td.active {
-  background-color: black;
+td.active {
+  background-color: pink;
 }
