add single keyup feature for taco track

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ td {
   background-image: url(../icons/jalapeno.gif);
 }
 
-.sauce {
+.sauce1 {
   background-color: #00ff5e;
+}
+
+.sauce2 {
+  background-color: #ffac00;
 }
